; ModuleID = '/home/carl/AnghaBench/systemd/src/test/extr_test-conf-parser.c_test_config_parse_sec.c'
source_filename = "/home/carl/AnghaBench/systemd/src/test/extr_test-conf-parser.c_test_config_parse_sec.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i8] c"1\00", align 1
@USEC_PER_SEC = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [3 x i8] c"1s\00", align 1
@.str.2 = private unnamed_addr constant [6 x i8] c"100ms\00", align 1
@USEC_PER_MSEC = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [9 x i8] c"5min 20s\00", align 1
@.str.4 = private unnamed_addr constant [3 x i8] c"-1\00", align 1
@.str.5 = private unnamed_addr constant [6 x i8] c"10foo\00", align 1
@.str.6 = private unnamed_addr constant [8 x i8] c"garbage\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_config_parse_sec to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_config_parse_sec() #0 {
  %1 = load i32, i32* @USEC_PER_SEC, align 4
  %2 = mul nsw i32 1, %1
  %3 = call i32 @test_config_parse_sec_one(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i32 %2)
  %4 = load i32, i32* @USEC_PER_SEC, align 4
  %5 = mul nsw i32 1, %4
  %6 = call i32 @test_config_parse_sec_one(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0), i32 %5)
  %7 = load i32, i32* @USEC_PER_MSEC, align 4
  %8 = mul nsw i32 100, %7
  %9 = call i32 @test_config_parse_sec_one(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.2, i64 0, i64 0), i32 %8)
  %10 = load i32, i32* @USEC_PER_SEC, align 4
  %11 = mul nsw i32 300, %10
  %12 = load i32, i32* @USEC_PER_SEC, align 4
  %13 = mul nsw i32 20, %12
  %14 = add nsw i32 %11, %13
  %15 = call i32 @test_config_parse_sec_one(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.3, i64 0, i64 0), i32 %14)
  %16 = call i32 @test_config_parse_sec_one(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.4, i64 0, i64 0), i32 0)
  %17 = call i32 @test_config_parse_sec_one(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.5, i64 0, i64 0), i32 0)
  %18 = call i32 @test_config_parse_sec_one(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.6, i64 0, i64 0), i32 0)
  ret void
}

declare dso_local i32 @test_config_parse_sec_one(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
